fixed image slideing out of div on smaller screens

--- a/css/blog.css
+++ b/css/blog.css
@@ -6,7 +6,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 100px;
-    padding: 100px 100px 50px 100px;
+    padding: 100px 50px 50px 50px;
     background-color: rgba(225, 215, 225, 0.95);
     border-radius: 25px;
     border: 2px solid rgba(85, 65, 85, 0.8);
@@ -20,8 +20,8 @@
     padding: 0;
     border-radius: 5px;
     border: 1px solid rgb(85, 65,85);
-    width: 600px;
-    height: 400px;
+    width: 90%;
+    height: auto;
     overflow: hidden;
 }
 
@@ -35,7 +35,7 @@
 
 .blog-left-images{
 
-    width: 450px;
+    width: 70%;
     height: auto;
     display: inline-block;
     margin-right: 10px;
@@ -47,7 +47,7 @@
 
 .blog-right-images{
 
-    width: 450px;
+    width: 70%;
     height: auto;
     display: inline-block;
     margin-left: 10px;
